some bugs fixed. unit tests added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,9 @@ file.reference.sqlite-jdbc-3.7.15-M1.jar=lib\\sqlite-jdbc-3.7.15-M1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.7.15-M1.jar}
+    ${file.reference.sqlite-jdbc-3.7.15-M1.jar}:\
+    ${libs.ejb3-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
