--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.7.15-M1.jar}:\
-    ${libs.ejb3-persistence.classpath}:\
-    ${libs.hibernate-support.classpath}
+    ${libs.hibernate-support.classpath}:\
+    ${libs.ejb3-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
