--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=decanat_hibernate
+application.vendor=Roma
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -22,16 +23,16 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/decanat.jar
+dist.jar=${dist.dir}/decanat_hibernate.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.7.15-M1.jar=lib\\sqlite-jdbc-3.7.15-M1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.7.15-M1.jar}:\
+    ${libs.ejb3-persistence.classpath}:\
     ${libs.hibernate-support.classpath}:\
-    ${libs.ejb3-persistence.classpath}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,7 +43,6 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.testng.classpath}:\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
